kubernetes/pathch_ingress/examples.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: >-
      {"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port":
      "443", "StatusCode": "HTTP_301"}}
    alb.ingress.kubernetes.io/certificate-arn: >-
      arn:aws:acm:us-east-1:286292902993:certificate/404ba1e2-5007-4b76-8986-8bf2381c4eea
    alb.ingress.kubernetes.io/group.name: res-data-public-ingresses
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: "subnet-0bcb8ea8c2c3a6d87,subnet-0ca188104a371bce8,subnet-0e07a78a1c0f5bbb8"
    alb.ingress.kubernetes.io/tags: Environment=development
    alb.ingress.kubernetes.io/target-type: instance
    kubernetes.io/ingress.class: alb
  creationTimestamp: "2023-08-17T16:18:18Z"
  finalizers:
    - group.ingress.k8s.aws/res-data-public-ingresses
  generation: 1
  labels:
    app.kubernetes.io/instance: res-connect
  name: res-connect-service-public-ingress
  namespace: res-infrastructure
  # resourceVersion: '686410107'
  # uid: 62ac3bf9-1849-48f0-ac64-a1167f8ef5da
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
            path: /*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: res-connect-service
                port:
                  number: 5000
            path: /res-connect/*
            pathType: ImplementationSpecific
